# ZSK-24-25

./: .gitignore  CMakeLists.txt  README.md
aplikacje desktopowe/09.10/: main.cpp
aplikacje desktopowe/10.02/: CMakeLists.txt  main.cpp
aplikacje desktopowe/10.09/: CMakeLists.txt
aplikacje desktopowe/11.13/: CMakeLists.txt  main.cpp
aplikacje desktopowe/23.10.spr/: 4D_wojciech_choros_k1.cpp  CMakeLists.txt
aplikacje desktopowe/HelloWorld/: mainwindow.ui
aplikacje desktopowe/obiektowka_wstep/: CMakeLists.txt  Point2D.cpp  Point2D.h  main.cpp
aplikacje desktopowe/sprawdzian_calculator/: calculator.ui  main.py  sprawdzian_calculator.pyproject  ui_calculator.py  ui_mainwindow.py
aplikacje mobilne/: settings.gradle.kts
aplikacje mobilne/app/: build.gradle.kts
aplikacje mobilne/gradle/wrapper/: gradle-wrapper.properties
aplikacje webowe/: wyklad 1.txt
informatyka/lekcja_2/: lekcja_2.sln
informatyka/lekcja_2/lekcja_2/: Program.cs
informatyka/lekcja_3/: CMakeLists.txt  main.cpp
informatyka/lekcja_4/: CMakeLists.txt  main.cpp
informatyka/lekcja_5/: CMakeLists.txt  main.cpp
informatyka/lekcja_6/: CMakeLists.txt  main.cpp
informatyka/lekcja_7_a_star/: CMakeLists.txt  Node.h  NodeField.cpp  NodeField.h  field.txt  main.cpp
informatyka/lekcja_9_data_fetching_and_ploting/: CMakeLists.txt  NBP_ExchangeRates_Output.xlsx  main.cpp  template_with_chart.xlsx
informatyka/lekcja_9_data_fetching_and_ploting/OpenXLSX/: CMakeLists.txt
pracownia testowania/BusinessLogic/: BusinessLogic.sln
pracownia testowania/MainProgram/: MainProgram.sln
(+25 files in other folders)
